--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ SECRET='SECRET_KEY'
 DATABASE_HOST='localhost'
 DATABASE_USERNAME='postgres'
 DATABASE_PASSWORD=''
-DATABASE_NAME='todo'
+DATABASE_NAME='nest-auth'
 
 # zeit/ms format
 FORGET_PASSWORD_EXPIRATION_TIME= '1d'
